hphp/test/zend/good/ext/intl/tests/bug60192-sortwithsortkeys.php.expectf

Catchable fatal error: Collator not initialized in %s/bug60192-sortwithsortkeys.php on line 11
